Add storage class to help read from PROGMEM

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,3 +7,4 @@ endfunction(define_test)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter -Wno-unused-function")
 add_definitions(-D_POSIX_SOURCE)
 define_test(http_test)
+define_test(storage_test)
